update(TestDataImpl): refactoring and minor changes
Moved common operations to the setUp() method to simplify test cases.
As a consequence, modified all test cases.
Fixed wrong assert usage (swapped arguments).
Replaced deprecated constructor Integer() with Integer.valueOf().
Moved some test cases in the right section (black box -> white box).