@@ -7,7 +7,6 @@ import java.util.Date;
 import java.util.List;
 import java.util.Map;
 
-import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
@@ -33,17 +32,27 @@ import it.polito.latazza.exceptions.DateException;
  * 
  */
 public class TestDataImpl {
-
 	DataInterface data;
+	int employeeId, beverageId;
 	
 	@BeforeEach
 	void setUp() throws Exception {
 		data = new DataImpl();
 		data.reset();
-	}
-
-	@AfterEach
-	void tearDown() throws Exception {
+		
+		/*
+		 * Initial environment:
+		 * - 1 employee: Mario Rossi, balance 1000
+		 * - 1 beverage: Coffee, 20 capsules per box, 5 euro per box
+		 * - Available capsules: 40 coffee
+		 * - Balance: 0
+		 * 
+		 * This is done here because many test cases need an employee, a beverage and/or some capsules.
+		 */
+		employeeId = data.createEmployee("Mario", "Rossi");
+		beverageId = data.createBeverage("Coffee", 20, 500);
+		data.rechargeAccount(employeeId, 1000);
+		data.buyBoxes(beverageId, 2);
 	}
 	
 	
@@ -54,10 +63,7 @@ public class TestDataImpl {
 	@Test
 	public void testGetBeverageName1() {
 		try {
-			int beverageId = data.createBeverage("Coffee", 20, 500);
-			assertTrue(beverageId >= 0);
-			String beverageName = data.getBeverageName(beverageId);
-			assertEquals("Coffee", beverageName);
+			assertEquals("Coffee", data.getBeverageName(beverageId));
 		} catch (BeverageException e) {
 			fail();
 		}
@@ -69,7 +75,7 @@ public class TestDataImpl {
 			data.getBeverageName(10);
 			fail();
 		} catch (BeverageException e) {
-
+			assertTrue(true);
 		}
 	}	
 	
@@ -79,17 +85,14 @@ public class TestDataImpl {
 			data.getBeverageName(-10);
 			fail();
 		} catch (BeverageException e) {
-
+			assertTrue(true);
 		}
 	}	
 	
 	@Test
 	public void testGetBeverageCapsulesPerBox1() {
 		try {
-			int beverageId = data.createBeverage("Coffee", 20, 500);
-			assertTrue(beverageId >= 0);
-			int capsulesPerBox = data.getBeverageCapsulesPerBox(beverageId);
-			assertEquals(20, capsulesPerBox);
+			assertEquals(Integer.valueOf(20), data.getBeverageCapsulesPerBox(beverageId));
 		} catch (BeverageException e) {
 			fail();
 		}
@@ -101,7 +104,7 @@ public class TestDataImpl {
 			data.getBeverageCapsulesPerBox(10);
 			fail();
 		} catch (BeverageException e) {
-
+			assertTrue(true);
 		}
 	}	
 	
@@ -111,17 +114,16 @@ public class TestDataImpl {
 			data.getBeverageCapsulesPerBox(-10);
 			fail();
 		} catch (BeverageException e) {
-
+			assertTrue(true);
 		}
 	}
 	
 	@Test
 	public void testGetBeverageCapsules1() {
 		try {
-			int beverageId = data.createBeverage("Coffee", 20, 500);
-			assertTrue(beverageId >= 0);
-			int capsules = data.getBeverageCapsules(beverageId);
-			assertEquals(0, capsules);
+			data.reset();
+			int idB = data.createBeverage("Coffee", 20, 500);
+			assertEquals(Integer.valueOf(0), data.getBeverageCapsules(idB));
 		} catch (BeverageException e) {
 			fail();
 		}
@@ -130,23 +132,8 @@ public class TestDataImpl {
 	@Test
 	public void testGetBeverageCapsules2() {
 		try {
-			int beverageId = data.createBeverage("Coffee", 20, 500);
-			assertTrue(beverageId >= 0);
-			
-			// create new employee and recharge his account
-			// to increase laTazza balance, allowing to buy new boxes
-			int id = data.createEmployee("Mario", "Rossi");
-			data.rechargeAccount(id, 10000);
-
-			// buy new boxes and check if capsule amount has been updated
-			data.buyBoxes(beverageId, 2);
-			int capsules = data.getBeverageCapsules(beverageId);
-			assertEquals(40, capsules);
+			assertEquals(Integer.valueOf(40), data.getBeverageCapsules(beverageId));
 		} catch (BeverageException e) {
-			fail();
-		} catch (NotEnoughBalance e) {
-			fail();
-		} catch (EmployeeException e) {
 			fail();
 		}
 	}
@@ -157,7 +144,7 @@ public class TestDataImpl {
 			data.getBeverageCapsules(10);
 			fail();
 		} catch (BeverageException e) {
-
+			assertTrue(true);
 		}
 	}	
 	
@@ -167,84 +154,45 @@ public class TestDataImpl {
 			data.getBeverageCapsules(-10);
 			fail();
 		} catch (BeverageException e) {
-
+			assertTrue(true);
 		}
 	}	
 	
 	@Test
 	public void testGetBeveragesId1() {
-		try {
-			int id = data.createBeverage("Coffee", 20, 500);
-			List<Integer> beverages = data.getBeveragesId();
-			assertTrue(beverages.size() == 1);
-			assertTrue(beverages.contains(id));
-		} catch (BeverageException e) {
-			fail();
-		}
+		List<Integer> beverages = data.getBeveragesId();
+		assertTrue(beverages.size() == 1);
+		assertTrue(beverages.contains(beverageId));
 	}	
 	
 	@Test
 	public void testGetBeveragesId2() {
+		data.reset();
 		List<Integer> beverages = data.getBeveragesId();
 		assertTrue(beverages.isEmpty());
 	}	
 	
 	@Test
-	// to obtain loop coverage 2+
-	public void testGetBeveragesId3() {
-		try {
-			int id1 = data.createBeverage("Coffee", 20, 500);
-			int id2 = data.createBeverage("Tea", 25, 400);
-			List<Integer> beverages = data.getBeveragesId();
-			assertTrue(beverages.size() == 2);
-			assertTrue(beverages.contains(id1));
-			assertTrue(beverages.contains(id2));
-		} catch (BeverageException e) {
-			fail();
-		}
-	}
-	
-	@Test
 	public void testGetBeverages1() {
-		try {
-			int id = data.createBeverage("Coffee", 20, 500);
-			Map<Integer, String> beverages = data.getBeverages();
-			assertTrue(beverages.size() == 1);
-			assertNotNull(beverages.get(id));
-			assertTrue(beverages.get(id).equals("Coffee"));
-		} catch (BeverageException e) {
-			fail();
-		}
+		Map<Integer, String> beverages = data.getBeverages();
+		assertTrue(beverages.size() == 1);
+		assertNotNull(beverages.get(beverageId));
+		assertTrue(beverages.get(beverageId).equals("Coffee"));
 	}	
 	
 	@Test
 	public void testGetBeverages2() {
+		data.reset();
 		Map<Integer, String> beverages = data.getBeverages();
 		assertTrue(beverages.isEmpty());
 	}	
 	
 	@Test
-	// to obtain loop coverage 2+
-	public void testGetBeverages3() {
-		try {
-			int id1 = data.createBeverage("Coffee", 20, 500);
-			int id2 = data.createBeverage("Tea", 25, 400);
-			Map<Integer, String> beverages = data.getBeverages();
-			assertTrue(beverages.size() == 2);
-			assertNotNull(beverages.get(id1));
-			assertNotNull(beverages.get(id2));
-			assertTrue(beverages.get(id1).equals("Coffee"));
-			assertTrue(beverages.get(id2).equals("Tea"));
-		} catch (BeverageException e) {
-			fail();
-		}
-	}
-	
-	@Test
 	public void testGetEmployeeBalance1() {
 		try {
-			int employeeId = data.createEmployee("Mario", "Rossi");
-			int balance = data.getEmployeeBalance(employeeId);
+			data.reset();
+			int idE = data.createEmployee("Mario", "Rossi");
+			int balance = data.getEmployeeBalance(idE);
 			assertEquals(0, balance);
 		} catch (EmployeeException e) {
 			fail();
@@ -254,22 +202,21 @@ public class TestDataImpl {
 	@Test
 	public void testGetEmployeeBalance2() {
 		try {
-			int employeeId = data.createEmployee("Mario", "Rossi");
+			assertEquals(Integer.valueOf(1000), data.getEmployeeBalance(employeeId));
 			data.rechargeAccount(employeeId, 500);
-			int balance = data.getEmployeeBalance(employeeId);
-			assertEquals(500, balance);
+			assertEquals(Integer.valueOf(1500), data.getEmployeeBalance(employeeId));
 		} catch (EmployeeException e) {
 			fail();
 		}
-	}	
+	}
 	
 	@Test
 	public void testGetEmployeeBalance3() {
 		try {
-			data.getEmployeeBalance(-10);
+			data.getEmployeeBalance(10);
 			fail();
 		} catch (EmployeeException e) {
-			
+			assertTrue(true);
 		}
 	}	
 	
@@ -279,15 +226,14 @@ public class TestDataImpl {
 			data.getEmployeeBalance(-10);
 			fail();
 		} catch (EmployeeException e) {
-			
+			assertTrue(true);
 		}
 	}	
 	
 	@Test
 	public void testGetEmployeeName1() {
 		try {
-			int id = data.createEmployee("Mario", "Rossi");
-			assertEquals(data.getEmployeeName(id), "Mario");
+			assertEquals("Mario", data.getEmployeeName(employeeId));
 		}
 		catch (EmployeeException e) {
 			fail();
@@ -301,14 +247,14 @@ public class TestDataImpl {
 			fail();
 		}
 		catch (EmployeeException e) {
+			assertTrue(true);
 		}
 	}
 	
 	@Test
 	public void testGetEmployeeSurname1() {
 		try {
-			int id = data.createEmployee("Mario", "Rossi");
-			assertEquals("Rossi", data.getEmployeeSurname(id));
+			assertEquals("Rossi", data.getEmployeeSurname(employeeId));
 		}
 		catch (EmployeeException e) {
 			fail();
@@ -322,17 +268,19 @@ public class TestDataImpl {
 			fail();
 		}
 		catch (EmployeeException e) {
+			assertTrue(true);
 		}
 	}
 	
 	@Test
 	public void testGetReport1() {
+		data.reset();
 		try {
-			Date d = new Date(); 
+			Date d = new Date();
 			assertEquals(0, data.getReport(d, new Date()).size());
 			
-			int id = data.createEmployee("Mario", "Rossi");
-			data.rechargeAccount(id, 10000);
+			employeeId = data.createEmployee("Mario", "Rossi");
+			data.rechargeAccount(employeeId, 10000);
 			List<String> l = data.getReport(d, new Date());
 			assertEquals(1, l.size());
 			String s = (String) l.get(0);
@@ -355,6 +303,7 @@ public class TestDataImpl {
 			data.getReport( new Date(new Date().getTime() + (1000 * 60 * 60 * 48)), new Date());
 			fail();
 		} catch (DateException e) {
+			assertTrue(true);
 		}
 	}
 	
@@ -364,27 +313,29 @@ public class TestDataImpl {
 			data.getReport( null, new Date());
 			fail();
 		} catch (DateException e) {
+			assertTrue(true);
 		}
 	}
 	
 	@Test
 	public void testGetEmployeeReport1() {
+		data.reset();
 		try {
 			Date d = new Date();
-			int id = data.createEmployee("Mario" ,"Rossi");
-			assertEquals(0, data.getEmployeeReport(id, d, new Date()).size());
+			employeeId = data.createEmployee("Mario", "Rossi");
+			assertEquals(0, data.getEmployeeReport(employeeId, d, new Date()).size());
 
-			data.rechargeAccount(id, 10000);
-			List<String> l = data.getEmployeeReport(id, d, new Date());
+			data.rechargeAccount(employeeId, 10000);
+			List<String> l = data.getEmployeeReport(employeeId, d, new Date());
 			assertEquals(1, l.size());
 			String s = (String) l.get(0);
 			assertEquals(" RECHARGE Mario Rossi " + String.format("%.2f", 100.0) + "€", s.substring(19, s.length()));  
 
 			int b = data.createBeverage("tea", 10, 1);
 			data.buyBoxes(b, 1);
-			data.sellCapsules(id, b, 10, true);
-			assertEquals(data.getEmployeeReport(id, d, new Date()).size(), 2);
-			s = data.getEmployeeReport(id, d, new Date()).get(1);
+			data.sellCapsules(employeeId, b, 10, true);
+			assertEquals(data.getEmployeeReport(employeeId, d, new Date()).size(), 2);
+			s = data.getEmployeeReport(employeeId, d, new Date()).get(1);
 			assertEquals(" BALANCE Mario Rossi tea 10", s.substring(19, s.length()));
 			
 		} catch (Exception e) {
@@ -395,9 +346,10 @@ public class TestDataImpl {
 	@Test
 	public void testGetEmployeeReport2() {
 		try {
-			data.getEmployeeReport(data.createEmployee("Mario" ,"Rossi"), new Date(new Date().getTime() + (1000 * 60 * 60 * 48)), new Date());
+			data.getEmployeeReport(employeeId, new Date(new Date().getTime() + (1000 * 60 * 60 * 48)), new Date());
 			fail();
 		} catch (DateException e) {
+			assertTrue(true);
 		}
 		catch (EmployeeException e) {
 			fail();
@@ -407,9 +359,10 @@ public class TestDataImpl {
 	@Test
 	public void testGetEmployeeReport3() {
 		try {
-			data.getEmployeeReport(data.createEmployee("Mario" ,"Rossi"), new Date(), null);
+			data.getEmployeeReport(employeeId, new Date(), null);
 			fail();
 		} catch (DateException e) {
+			assertTrue(true);
 		}
 		catch (EmployeeException e) {
 			fail();
@@ -425,20 +378,19 @@ public class TestDataImpl {
 			fail();
 		}
 		catch (EmployeeException e) {
+			assertTrue(true);
 		}
 	}
 	
 	@Test
 	public void testGetEmployeesId() {
 		try {
-			assertEquals(0, data.getEmployeesId().size());
-			int id1 = data.createEmployee("Mario" ,"Rossi");
 			assertEquals(1, data.getEmployeesId().size());
-			int id2 = data.createEmployee("Marco", "Bianchi");
+			int idE = data.createEmployee("Marco", "Bianchi");
 			List<Integer> l = data.getEmployeesId();
 			assertEquals(2, l.size());
-			assertTrue(l.contains(id1));
-			assertTrue(l.contains(id2));
+			assertTrue(l.contains(employeeId));
+			assertTrue(l.contains(idE));
 		} catch (EmployeeException e){
 			fail();
 		}
@@ -447,14 +399,12 @@ public class TestDataImpl {
 	@Test
 	public void testGetEmployees() {
 		try {
-			assertEquals(0, data.getEmployees().size());
-			int id1 = data.createEmployee("Mario" ,"Rossi");
 			assertEquals(data.getEmployees().size(), 1);
-			int id2 = data.createEmployee("Marco", "Bianchi");
+			int idE = data.createEmployee("Marco", "Bianchi");
 			Map<Integer, String> m = data.getEmployees();
 			assertEquals(2, m.size());
-			assertEquals("Mario Rossi", m.get(id1));
-			assertEquals("Marco Bianchi", m.get(id2));
+			assertEquals("Mario Rossi", m.get(employeeId));
+			assertEquals("Marco Bianchi", m.get(idE));
 		} catch (EmployeeException e){
 			fail();
 		}
@@ -462,17 +412,12 @@ public class TestDataImpl {
 	
 	@Test
 	public void testCreateBeverage1() {
-		int id = -1;
 		try {
-			id = data.createBeverage("Coffee", 20, 500);
-		} catch (BeverageException e) {
-			fail();
-		}
-		
-		try {
-			assertEquals("Coffee", data.getBeverageName(id));
-			assertEquals(new Integer(20), data.getBeverageCapsulesPerBox(id));
-			assertEquals(new Integer(500), data.getBeverageBoxPrice(id));
+			data.reset();
+			int idB = data.createBeverage("Coffee", 20, 500);
+			assertEquals("Coffee", data.getBeverageName(idB));
+			assertEquals(Integer.valueOf(20), data.getBeverageCapsulesPerBox(idB));
+			assertEquals(Integer.valueOf(500), data.getBeverageBoxPrice(idB));
 		} catch (BeverageException e) {
 			fail();
 		}
@@ -481,6 +426,7 @@ public class TestDataImpl {
 	@Test
 	public void testCreateBeverage2() {
 		try {
+			data.reset();
 			data.createBeverage("Coffee", 20, -500);
 			fail();
 		} catch (BeverageException e) {
@@ -491,6 +437,7 @@ public class TestDataImpl {
 	@Test
 	public void testCreateBeverage3() {
 		try {
+			data.reset();
 			data.createBeverage("Coffee", -20, 500);
 			fail();
 		} catch (BeverageException e) {
@@ -501,7 +448,6 @@ public class TestDataImpl {
 	@Test
 	public void testCreateBeverage4() {
 		try {
-			data.createBeverage("Coffee", 20, 500);
 			data.createBeverage("Coffee", 25, 600);
 			fail();
 		} catch (BeverageException e) {
@@ -512,8 +458,7 @@ public class TestDataImpl {
 	@Test
 	public void testGetBeverageBoxPrice1() {
 		try {
-			int id = data.createBeverage("Coffee", 20, 500);
-			assertEquals(new Integer(500), data.getBeverageBoxPrice(id));
+			assertEquals(Integer.valueOf(500), data.getBeverageBoxPrice(beverageId));
 		} catch (BeverageException e) {
 			fail();
 		}
@@ -522,6 +467,7 @@ public class TestDataImpl {
 	@Test
 	public void testGetBeverageBoxPrice2() {
 		try {
+			data.reset();
 			data.getBeverageBoxPrice(1);
 			fail();
 		} catch (BeverageException e) {
@@ -532,6 +478,7 @@ public class TestDataImpl {
 	@Test
 	public void testCreateEmployee1() {
 		try {
+			data.reset();
 			int id = data.createEmployee("Mario", "Rossi");
 			assertEquals("Mario", data.getEmployeeName(id));
 			assertEquals("Rossi", data.getEmployeeSurname(id));
@@ -544,7 +491,6 @@ public class TestDataImpl {
 	public void testCreateEmployee2() {
 		try {
 			data.createEmployee("Mario", "Rossi");
-			data.createEmployee("Mario", "Rossi");
 			fail();
 		} catch (EmployeeException e) {
 			assertTrue(true);
@@ -553,57 +499,37 @@ public class TestDataImpl {
 	
 	@Test
 	public void testBuyBoxes1() {
-		int idB=-1;
+		data.reset();
 		try {
 			int idE = data.createEmployee("Mario", "Rossi");
-			idB = data.createBeverage("Coffee", 20, 500);
+			int idB = data.createBeverage("Coffee", 20, 500);
 			data.rechargeAccount(idE, 500);
-		} catch (Exception e) {
-			fail("Exception while creating the environment");
-		}
-		
-		try {
 			data.buyBoxes(idB, 1);
-			assertEquals(new Integer(20), data.getBeverageCapsules(idB));
-		} catch (BeverageException | NotEnoughBalance e) {
+			assertEquals(Integer.valueOf(20), data.getBeverageCapsules(idB));
+		} catch (BeverageException | NotEnoughBalance | EmployeeException e) {
 			fail();
 		}
 	}
 	
 	@Test
 	public void testBuyBoxes2() {
-		int idB=-1;
 		try {
-			idB = data.createBeverage("Coffee", 20, 500);
-		} catch (Exception e) {
-			fail("Exception while creating the environment");
-		}
-		
-		try {
-			data.buyBoxes(idB, 1);
+			data.buyBoxes(beverageId, 1);
+			fail();
+		} catch (BeverageException e) {
 			fail();
 		} catch (NotEnoughBalance e) {
 			assertTrue(true);
-		} catch (BeverageException e) {
-			fail();
 		}
 	}
 	
 	@Test
 	public void testBuyBoxes3() {
-		int idB=-1;
 		try {
-			int idE = data.createEmployee("Mario", "Rossi");
-			idB = data.createBeverage("Coffee", 20, 500);
-			data.rechargeAccount(idE, 500);
-		} catch (Exception e) {
-			fail("Exception while creating the environment");
-		}
-		
-		try {
-			data.buyBoxes(idB, -1);
+			data.rechargeAccount(employeeId, 500);
+			data.buyBoxes(beverageId, -1);
 			fail();
-		} catch (NotEnoughBalance e) {
+		} catch (NotEnoughBalance | EmployeeException e) {
 			fail();
 		} catch (BeverageException e) {
 			assertTrue(true);
@@ -613,16 +539,9 @@ public class TestDataImpl {
 	@Test
 	public void testBuyBoxes4() {
 		try {
-			int idE = data.createEmployee("Mario", "Rossi");
-			data.rechargeAccount(idE, 500);
-		} catch (Exception e) {
-			fail("Exception while creating the environment");
-		}
-		
-		try {
-			data.buyBoxes(1, 1);
-			fail();
-		} catch (NotEnoughBalance e) {
+			data.rechargeAccount(employeeId, 500);
+			data.buyBoxes(10, 1);
+		} catch (NotEnoughBalance | EmployeeException e) {
 			fail();
 		} catch (BeverageException e) {
 			assertTrue(true);
@@ -632,14 +551,12 @@ public class TestDataImpl {
 	@Test
 	public void testGetBalance1() {
 		try {
-			int idE = data.createEmployee("Mario", "Rossi");
-			int idB = data.createBeverage("Coffee", 20, 500);
-			data.rechargeAccount(idE, 500);
-			assertEquals(new Integer(500), data.getBalance());
-			data.buyBoxes(idB, 1);
-			assertEquals(new Integer(0), data.getBalance());
-			data.sellCapsulesToVisitor(idB, 4);
-			assertEquals(new Integer(100), data.getBalance());
+			data.rechargeAccount(employeeId, 500);
+			assertEquals(Integer.valueOf(500), data.getBalance());
+			data.buyBoxes(beverageId, 1);
+			assertEquals(Integer.valueOf(0), data.getBalance());
+			data.sellCapsulesToVisitor(beverageId, 4);
+			assertEquals(Integer.valueOf(100), data.getBalance());
 		} catch (BeverageException | EmployeeException | NotEnoughBalance | NotEnoughCapsules e) {
 			fail();
 		}
@@ -647,18 +564,17 @@ public class TestDataImpl {
 	
 	@Test
 	public void testGetBalance2() {
-		assertEquals(new Integer(0), data.getBalance());
+		data.reset();
+		assertEquals(Integer.valueOf(0), data.getBalance());
 	}
 	
 	@Test
 	public void testRechargeAccount1() {
 		try {
-			assertEquals(data.getEmployees().size(), 0);
-			int id1 = data.createEmployee("Mario" ,"Rossi");
-			assertEquals(data.getEmployeeBalance(id1), new Integer(0));
-			data.rechargeAccount(id1, 10);
-			assertEquals(data.getEmployeeBalance(id1), new Integer(10));
-		} catch (Exception e){
+			assertEquals(Integer.valueOf(1000), data.getEmployeeBalance(employeeId));
+			data.rechargeAccount(employeeId, 500);
+			assertEquals(Integer.valueOf(1500), data.getEmployeeBalance(employeeId));
+		} catch (EmployeeException e){
 			fail();
 		}
 	}
@@ -668,64 +584,61 @@ public class TestDataImpl {
 		try {
 			data.rechargeAccount(-1, 10);
 			fail();
-		} catch (Exception e){
+		} catch (EmployeeException e){
+			assertTrue(true);
 		}
 	}
 	
 	@Test
 	public void testRechargeAccount3() {
 		try {
-			assertEquals(data.getEmployees().size(), 0);
-			int id1 = data.createEmployee("Mario" ,"Rossi");
-			assertEquals(data.getEmployeeBalance(id1), new Integer(0));
-			data.rechargeAccount(id1, -10);
+			assertEquals(Integer.valueOf(1000), data.getEmployeeBalance(employeeId));
+			data.rechargeAccount(employeeId, -10);
 			fail();
 		} catch (EmployeeException e) {
-		} catch (Exception e){
-			fail();
+			assertTrue(true);
 		}
 	}
 	
 	@Test
 	public void tcReset() {
 		try {
-			int id1 = data.createEmployee("Mario", "Rossi");
 			data.createEmployee("Luca", "Sassi");
 			int b1 = data.createBeverage("tea", 50, 1000);
-			data.rechargeAccount(id1, 2000);
+			data.rechargeAccount(employeeId, 2000);
 			data.buyBoxes(b1, 2);
-			data.sellCapsules(id1, b1, 50, true);
-			assertEquals(data.getEmployeeBalance(id1), new Integer(1000));
+			data.sellCapsules(employeeId, b1, 50, true);
+			assertEquals(Integer.valueOf(2000), data.getEmployeeBalance(employeeId));
 			data.reset();
 			assertEquals(data.getEmployees().size(), 0);
 			assertEquals(data.getBeverages().size(), 0);
-			assertEquals(data.getBalance(), new Integer(0));
-		} catch (Exception e) {
-			e.printStackTrace();
+			assertEquals(data.getBalance(), Integer.valueOf(0));
+		} catch (EmployeeException | BeverageException | NotEnoughBalance | NotEnoughCapsules e) {
 			fail();
 		}
 	}
 	
 	@Test
 	public void testSellCapsules1() {
+		data.reset();
 		try {
 			assertEquals(data.getEmployees().size(), 0);
 			int id1 = data.createEmployee("Mario" ,"Rossi");
-			assertEquals(data.getEmployeeBalance(id1), new Integer(0));
+			assertEquals(data.getEmployeeBalance(id1), Integer.valueOf(0));
 			data.rechargeAccount(id1, 2000);
-			assertEquals(data.getEmployeeBalance(id1), new Integer(2000));
+			assertEquals(data.getEmployeeBalance(id1), Integer.valueOf(2000));
 			int b1 = data.createBeverage("tea", 50, 1000);
 			assertEquals(data.getBeverages().size(), 1);
 			data.buyBoxes(b1, 2);
-			assertEquals(data.getBeverageCapsules(b1), new Integer(100));
+			assertEquals(data.getBeverageCapsules(b1), Integer.valueOf(100));
 			data.sellCapsules(id1, b1, 50, true);
-			assertEquals(data.getEmployeeBalance(id1),new Integer(1000));
-			assertEquals(data.getBeverageCapsules(b1), new Integer(50));
-			assertEquals(data.getBalance(), new Integer(0));
+			assertEquals(data.getEmployeeBalance(id1),Integer.valueOf(1000));
+			assertEquals(data.getBeverageCapsules(b1), Integer.valueOf(50));
+			assertEquals(data.getBalance(), Integer.valueOf(0));
 			data.sellCapsules(id1, b1, 50, false);
-			assertEquals(data.getEmployeeBalance(id1),new Integer(1000));
-			assertEquals(data.getBeverageCapsules(b1), new Integer(0));
-			assertEquals(data.getBalance(), new Integer(1000));
+			assertEquals(data.getEmployeeBalance(id1),Integer.valueOf(1000));
+			assertEquals(data.getBeverageCapsules(b1), Integer.valueOf(0));
+			assertEquals(data.getBalance(), Integer.valueOf(1000));
 		} catch (Exception e){
 			fail();
 		}
@@ -733,17 +646,18 @@ public class TestDataImpl {
 	
 	@Test
 	public void testSellCapsules2() {
+		data.reset();
 		int id1 = 0, b1 = 0; 
 		try {
 			assertEquals(data.getEmployees().size(), 0);
 			id1 = data.createEmployee("Mario" ,"Rossi");
-			assertEquals(data.getEmployeeBalance(id1), new Integer(0));
+			assertEquals(data.getEmployeeBalance(id1), Integer.valueOf(0));
 			data.rechargeAccount(id1, 2000);
-			assertEquals(data.getEmployeeBalance(id1), new Integer(2000));
+			assertEquals(data.getEmployeeBalance(id1), Integer.valueOf(2000));
 			b1 = data.createBeverage("tea", 50, 1000);
 			assertEquals(data.getBeverages().size(), 1);
 			data.buyBoxes(b1, 2);
-			assertEquals(data.getBeverageCapsules(b1), new Integer(100));
+			assertEquals(data.getBeverageCapsules(b1), Integer.valueOf(100));
 			data.sellCapsules(id1+1, b1, 50, true);
 			fail();
 		} catch (EmployeeException e){
@@ -761,17 +675,18 @@ public class TestDataImpl {
 	
 	@Test
 	public void testSellCapsules3() {
+		data.reset();
 		int id1 = 0, b1 = 0; 
 		try {
 			assertEquals(data.getEmployees().size(), 0);
 			id1 = data.createEmployee("Mario" ,"Rossi");
-			assertEquals(data.getEmployeeBalance(id1), new Integer(0));
+			assertEquals(data.getEmployeeBalance(id1), Integer.valueOf(0));
 			data.rechargeAccount(id1, 2000);
-			assertEquals(data.getEmployeeBalance(id1), new Integer(2000));
+			assertEquals(data.getEmployeeBalance(id1), Integer.valueOf(2000));
 			b1 = data.createBeverage("tea", 50, 1000);
 			assertEquals(data.getBeverages().size(), 1);
 			data.buyBoxes(b1, 2);
-			assertEquals(data.getBeverageCapsules(b1), new Integer(100));
+			assertEquals(data.getBeverageCapsules(b1), Integer.valueOf(100));
 			data.sellCapsules(-1, b1, 50, true);
 			fail();
 		} catch (EmployeeException e){
@@ -789,17 +704,18 @@ public class TestDataImpl {
 	
 	@Test
 	public void testSellCapsules4() {
+		data.reset();
 		int id1 = 0, b1 = 0; 
 		try {
 			assertEquals(data.getEmployees().size(), 0);
 			id1 = data.createEmployee("Mario" ,"Rossi");
-			assertEquals(data.getEmployeeBalance(id1), new Integer(0));
+			assertEquals(data.getEmployeeBalance(id1), Integer.valueOf(0));
 			data.rechargeAccount(id1, 2000);
-			assertEquals(data.getEmployeeBalance(id1), new Integer(2000));
+			assertEquals(data.getEmployeeBalance(id1), Integer.valueOf(2000));
 			b1 = data.createBeverage("tea", 50, 1000);
 			assertEquals(data.getBeverages().size(), 1);
 			data.buyBoxes(b1, 2);
-			assertEquals(data.getBeverageCapsules(b1), new Integer(100));
+			assertEquals(data.getBeverageCapsules(b1), Integer.valueOf(100));
 			data.sellCapsules(id1, b1+1, 50, true);
 			fail();
 		} catch (BeverageException e){
@@ -818,17 +734,18 @@ public class TestDataImpl {
 	
 	@Test
 	public void testSellCapsules5() {
+		data.reset();
 		int id1 = 0, b1 = 0; 
 		try {
 			assertEquals(data.getEmployees().size(), 0);
 			id1 = data.createEmployee("Mario" ,"Rossi");
-			assertEquals(data.getEmployeeBalance(id1), new Integer(0));
+			assertEquals(data.getEmployeeBalance(id1), Integer.valueOf(0));
 			data.rechargeAccount(id1, 2000);
-			assertEquals(data.getEmployeeBalance(id1), new Integer(2000));
+			assertEquals(data.getEmployeeBalance(id1), Integer.valueOf(2000));
 			b1 = data.createBeverage("tea", 50, 1000);
 			assertEquals(data.getBeverages().size(), 1);
 			data.buyBoxes(b1, 2);
-			assertEquals(data.getBeverageCapsules(b1), new Integer(100));
+			assertEquals(data.getBeverageCapsules(b1), Integer.valueOf(100));
 			data.sellCapsules(id1, -1, 50, true);
 			fail();
 		} catch (BeverageException e){
@@ -847,17 +764,18 @@ public class TestDataImpl {
 	
 	@Test
 	public void testSellCapsules6() {
+		data.reset();
 		int id1 = 0, b1 = 0; 
 		try {
 			assertEquals(data.getEmployees().size(), 0);
 			id1 = data.createEmployee("Mario" ,"Rossi");
-			assertEquals(data.getEmployeeBalance(id1), new Integer(0));
+			assertEquals(data.getEmployeeBalance(id1), Integer.valueOf(0));
 			data.rechargeAccount(id1, 2000);
-			assertEquals(data.getEmployeeBalance(id1), new Integer(2000));
+			assertEquals(data.getEmployeeBalance(id1), Integer.valueOf(2000));
 			b1 = data.createBeverage("tea", 50, 1000);
 			assertEquals(data.getBeverages().size(), 1);
 			data.buyBoxes(b1, 2);
-			assertEquals(data.getBeverageCapsules(b1), new Integer(100));
+			assertEquals(data.getBeverageCapsules(b1), Integer.valueOf(100));
 			data.sellCapsules(id1, b1, 115, true);
 			fail();
 		} catch (NotEnoughCapsules e){
@@ -876,17 +794,18 @@ public class TestDataImpl {
 	
 	@Test
 	public void testSellCapsules7() {
+		data.reset();
 		int id1 = 0, b1 = 0; 
 		try {
 			assertEquals(data.getEmployees().size(), 0);
 			id1 = data.createEmployee("Mario" ,"Rossi");
-			assertEquals(data.getEmployeeBalance(id1), new Integer(0));
+			assertEquals(data.getEmployeeBalance(id1), Integer.valueOf(0));
 			data.rechargeAccount(id1, 2000);
-			assertEquals(data.getEmployeeBalance(id1), new Integer(2000));
+			assertEquals(data.getEmployeeBalance(id1), Integer.valueOf(2000));
 			b1 = data.createBeverage("tea", 50, 1000);
 			assertEquals(data.getBeverages().size(), 1);
 			data.buyBoxes(b1, 2);
-			assertEquals(data.getBeverageCapsules(b1), new Integer(100));
+			assertEquals(data.getBeverageCapsules(b1), Integer.valueOf(100));
 			data.sellCapsules(id1, b1, -5, true);
 			fail();
 		} catch (BeverageException e){
@@ -905,19 +824,20 @@ public class TestDataImpl {
 	
 	@Test
 	public void testSellCapsulesToVisitor1() {
+		data.reset();
 		try {
 			assertEquals(data.getEmployees().size(), 0);
 			int id1 = data.createEmployee("Mario" ,"Rossi");
-			assertEquals(data.getEmployeeBalance(id1), new Integer(0));
+			assertEquals(data.getEmployeeBalance(id1), Integer.valueOf(0));
 			data.rechargeAccount(id1, 2000);
-			assertEquals(data.getEmployeeBalance(id1), new Integer(2000));
+			assertEquals(data.getEmployeeBalance(id1), Integer.valueOf(2000));
 			int b1 = data.createBeverage("tea", 50, 1000);
 			assertEquals(data.getBeverages().size(), 1);
 			data.buyBoxes(b1, 2);
-			assertEquals(data.getBeverageCapsules(b1), new Integer(100));
+			assertEquals(data.getBeverageCapsules(b1), Integer.valueOf(100));
 			data.sellCapsulesToVisitor(b1, 50);
-			assertEquals(data.getBalance(), new Integer(1000));
-			assertEquals(data.getBeverageCapsules(b1), new Integer(50));
+			assertEquals(data.getBalance(), Integer.valueOf(1000));
+			assertEquals(data.getBeverageCapsules(b1), Integer.valueOf(50));
 		} catch (Exception e){
 			fail();
 		}
@@ -925,16 +845,17 @@ public class TestDataImpl {
 	
 	@Test
 	public void testSellCapsulesToVisitor2() {
+		data.reset();
 		try {
 			assertEquals(data.getEmployees().size(), 0);
 			int id1 = data.createEmployee("Mario" ,"Rossi");
-			assertEquals(data.getEmployeeBalance(id1), new Integer(0));
+			assertEquals(data.getEmployeeBalance(id1), Integer.valueOf(0));
 			data.rechargeAccount(id1, 2000);
-			assertEquals(data.getEmployeeBalance(id1), new Integer(2000));
+			assertEquals(data.getEmployeeBalance(id1), Integer.valueOf(2000));
 			int b1 = data.createBeverage("tea", 50, 1000);
 			assertEquals(data.getBeverages().size(), 1);
 			data.buyBoxes(b1, 2);
-			assertEquals(data.getBeverageCapsules(b1), new Integer(100));
+			assertEquals(data.getBeverageCapsules(b1), Integer.valueOf(100));
 			data.sellCapsulesToVisitor(b1+1, 50);
 			fail();
 		} catch (BeverageException e){
@@ -945,16 +866,17 @@ public class TestDataImpl {
 	
 	@Test
 	public void testSellCapsulesToVisitor3() {
+		data.reset();
 		try {
 			assertEquals(data.getEmployees().size(), 0);
 			int id1 = data.createEmployee("Mario" ,"Rossi");
-			assertEquals(data.getEmployeeBalance(id1), new Integer(0));
+			assertEquals(data.getEmployeeBalance(id1), Integer.valueOf(0));
 			data.rechargeAccount(id1, 2000);
-			assertEquals(data.getEmployeeBalance(id1), new Integer(2000));
+			assertEquals(data.getEmployeeBalance(id1), Integer.valueOf(2000));
 			int b1 = data.createBeverage("tea", 50, 1000);
 			assertEquals(data.getBeverages().size(), 1);
 			data.buyBoxes(b1, 2);
-			assertEquals(data.getBeverageCapsules(b1), new Integer(100));
+			assertEquals(data.getBeverageCapsules(b1), Integer.valueOf(100));
 			data.sellCapsulesToVisitor(-1, 50);
 			fail();
 		} catch (BeverageException e){
@@ -965,16 +887,17 @@ public class TestDataImpl {
 	
 	@Test
 	public void testSellCapsulesToVisitor4() {
+		data.reset();
 		try {
 			assertEquals(data.getEmployees().size(), 0);
 			int id1 = data.createEmployee("Mario" ,"Rossi");
-			assertEquals(data.getEmployeeBalance(id1), new Integer(0));
+			assertEquals(data.getEmployeeBalance(id1), Integer.valueOf(0));
 			data.rechargeAccount(id1, 2000);
-			assertEquals(data.getEmployeeBalance(id1), new Integer(2000));
+			assertEquals(data.getEmployeeBalance(id1), Integer.valueOf(2000));
 			int b1 = data.createBeverage("tea", 50, 1000);
 			assertEquals(data.getBeverages().size(), 1);
 			data.buyBoxes(b1, 2);
-			assertEquals(data.getBeverageCapsules(b1), new Integer(100));
+			assertEquals(data.getBeverageCapsules(b1), Integer.valueOf(100));
 			data.sellCapsulesToVisitor(b1, 115);
 			fail();
 		} catch (NotEnoughCapsules e){
@@ -985,16 +908,17 @@ public class TestDataImpl {
 	
 	@Test
 	public void testSellCapsulesToVisitor5() {
+		data.reset();
 		try {
 			assertEquals(data.getEmployees().size(), 0);
 			int id1 = data.createEmployee("Mario" ,"Rossi");
-			assertEquals(data.getEmployeeBalance(id1), new Integer(0));
+			assertEquals(data.getEmployeeBalance(id1), Integer.valueOf(0));
 			data.rechargeAccount(id1, 2000);
-			assertEquals(data.getEmployeeBalance(id1), new Integer(2000));
+			assertEquals(data.getEmployeeBalance(id1), Integer.valueOf(2000));
 			int b1 = data.createBeverage("tea", 50, 1000);
 			assertEquals(data.getBeverages().size(), 1);
 			data.buyBoxes(b1, 2);
-			assertEquals(data.getBeverageCapsules(b1), new Integer(100));
+			assertEquals(data.getBeverageCapsules(b1), Integer.valueOf(100));
 			data.sellCapsulesToVisitor(b1, -5);
 			fail();
 		} catch (BeverageException e){
@@ -1006,19 +930,15 @@ public class TestDataImpl {
 	@Test
 	public void testUpdateBeverage1() {
 		try {
-			assertEquals(data.getBeverages().size(), 0);
 			int b1 = data.createBeverage("tea", 50, 1000);
-			assertEquals(data.getBeverages().size(), 1);
-			int id1 = data.createEmployee("Mario" ,"Rossi");
-			assertEquals(data.getEmployeeBalance(id1), new Integer(0));
-			data.rechargeAccount(id1, 2000);
+			data.rechargeAccount(employeeId, 2000);
 			data.buyBoxes(b1, 1);
 			data.updateBeverage(b1, "lemon tea", 60, 1250);
-			assertEquals(data.getBeverages().size(), 1);
-			assertEquals(data.getBeverageName(b1), "lemon tea");
-			assertEquals(data.getBeverageBoxPrice(b1), new Integer(1250));
-			assertEquals(data.getBeverageCapsulesPerBox(b1), new Integer(60));
-			assertEquals(data.getBeverageCapsules(b1), new Integer(50));
+			assertEquals(2, data.getBeverages().size());
+			assertEquals("lemon tea", data.getBeverageName(b1));
+			assertEquals(Integer.valueOf(1250), data.getBeverageBoxPrice(b1));
+			assertEquals(Integer.valueOf(60), data.getBeverageCapsulesPerBox(b1));
+			assertEquals(Integer.valueOf(50), data.getBeverageCapsules(b1));
 		} catch (Exception e) {
 			fail();
 		}
@@ -1028,25 +948,14 @@ public class TestDataImpl {
 	public void testUpdateBeverage2() {
 		int b1 = 0;
 		try {
-			assertEquals(data.getBeverages().size(), 0);
 			b1 = data.createBeverage("tea", 50, 1000);
-			assertEquals(data.getBeverages().size(), 1);
-			int id1 = data.createEmployee("Mario" ,"Rossi");
-			assertEquals(data.getEmployeeBalance(id1), new Integer(0));
-			data.rechargeAccount(id1, 2000);
+			assertEquals(2, data.getBeverages().size());
+			data.rechargeAccount(employeeId, 2000);
 			data.buyBoxes(b1, 1);
 			data.updateBeverage(b1+1, "lemon tea", 60, 1250);
 			fail();
 		} catch (BeverageException e) {
-			assertEquals(data.getBeverages().size(), 1);
-			try {
-				assertEquals(data.getBeverageName(b1), "tea");
-				assertEquals(data.getBeverageBoxPrice(b1), new Integer(1000));
-				assertEquals(data.getBeverageCapsulesPerBox(b1), new Integer(50));
-				assertEquals(data.getBeverageCapsules(b1), new Integer(50));
-			} catch (BeverageException e1) {
-				fail();
-			}
+			assertTrue(true);
 		} catch (Exception e) {
 			fail();
 		}
@@ -1056,25 +965,14 @@ public class TestDataImpl {
 	public void testUpdateBeverage3() {
 		int b1 = 0;
 		try {
-			assertEquals(data.getBeverages().size(), 0);
 			b1 = data.createBeverage("tea", 50, 1000);
-			assertEquals(data.getBeverages().size(), 1);
-			int id1 = data.createEmployee("Mario" ,"Rossi");
-			assertEquals(data.getEmployeeBalance(id1), new Integer(0));
-			data.rechargeAccount(id1, 2000);
+			assertEquals(2, data.getBeverages().size());
+			data.rechargeAccount(employeeId, 2000);
 			data.buyBoxes(b1, 1);
 			data.updateBeverage(-1, "lemon tea", 60, 1250);
 			fail();
 		} catch (BeverageException e) {
-			assertEquals(data.getBeverages().size(), 1);
-			try {
-				assertEquals(data.getBeverageName(b1), "tea");
-				assertEquals(data.getBeverageBoxPrice(b1), new Integer(1000));
-				assertEquals(data.getBeverageCapsulesPerBox(b1), new Integer(50));
-				assertEquals(data.getBeverageCapsules(b1), new Integer(50));
-			} catch (BeverageException e1) {
-				fail();
-			}
+			assertTrue(true);
 		} catch (Exception e) {
 			fail();
 		}
@@ -1084,25 +982,14 @@ public class TestDataImpl {
 	public void testUpdateBeverage4() {
 		int b1 = 0;
 		try {
-			assertEquals(data.getBeverages().size(), 0);
 			b1 = data.createBeverage("tea", 50, 1000);
-			assertEquals(data.getBeverages().size(), 1);
-			int id1 = data.createEmployee("Mario" ,"Rossi");
-			assertEquals(data.getEmployeeBalance(id1), new Integer(0));
-			data.rechargeAccount(id1, 2000);
+			assertEquals(2, data.getBeverages().size());
+			data.rechargeAccount(employeeId, 2000);
 			data.buyBoxes(b1, 1);
 			data.updateBeverage(b1, "lemon tea", -5, 1250);
 			fail();
 		} catch (BeverageException e) {
-			assertEquals(data.getBeverages().size(), 1);
-			try {
-				assertEquals(data.getBeverageName(b1), "tea");
-				assertEquals(data.getBeverageBoxPrice(b1), new Integer(1000));
-				assertEquals(data.getBeverageCapsulesPerBox(b1), new Integer(50));
-				assertEquals(data.getBeverageCapsules(b1), new Integer(50));
-			} catch (BeverageException e1) {
-				fail();
-			}
+			assertTrue(true);
 		} catch (Exception e) {
 			fail();
 		}
@@ -1112,25 +999,14 @@ public class TestDataImpl {
 	public void testUpdateBeverage5() {
 		int b1 = 0;
 		try {
-			assertEquals(data.getBeverages().size(), 0);
 			b1 = data.createBeverage("tea", 50, 1000);
-			assertEquals(data.getBeverages().size(), 1);
-			int id1 = data.createEmployee("Mario" ,"Rossi");
-			assertEquals(data.getEmployeeBalance(id1), new Integer(0));
-			data.rechargeAccount(id1, 2000);
+			assertEquals(2, data.getBeverages().size());
+			data.rechargeAccount(employeeId, 2000);
 			data.buyBoxes(b1, 1);
 			data.updateBeverage(b1+1, "lemon tea", 60, -1000);
 			fail();
 		} catch (BeverageException e) {
-			assertEquals(data.getBeverages().size(), 1);
-			try {
-				assertEquals(data.getBeverageName(b1), "tea");
-				assertEquals(data.getBeverageBoxPrice(b1), new Integer(1000));
-				assertEquals(data.getBeverageCapsulesPerBox(b1), new Integer(50));
-				assertEquals(data.getBeverageCapsules(b1), new Integer(50));
-			} catch (BeverageException e1) {
-				fail();
-			}
+			assertTrue(true);
 		} catch (Exception e) {
 			fail();
 		}
@@ -1138,17 +1014,18 @@ public class TestDataImpl {
 	
 	@Test
 	public void testUpdateEmployee1() {
+		data.reset();
 		try {
 			assertEquals(data.getEmployees().size(), 0);
 			int id1 = data.createEmployee("Mario", "Rossi");
 			assertEquals(data.getEmployees().size(), 1);
 			data.rechargeAccount(id1, 1000);
-			assertEquals(data.getEmployeeBalance(id1), new Integer(1000));
+			assertEquals(data.getEmployeeBalance(id1), Integer.valueOf(1000));
 			data.updateEmployee(id1, "Michele", "Suria");
 			assertEquals(data.getEmployees().size(), 1);
 			assertEquals(data.getEmployeeName(id1), "Michele");
 			assertEquals(data.getEmployeeSurname(id1), "Suria");
-			assertEquals(data.getEmployeeBalance(id1), new Integer(1000));
+			assertEquals(data.getEmployeeBalance(id1), Integer.valueOf(1000));
 		} catch (Exception e) {
 			fail();
 		}
@@ -1156,13 +1033,14 @@ public class TestDataImpl {
 	
 	@Test
 	public void testUpdateEmployee2() {
+		data.reset();
 		int id1 = 0;
 		try {
 			assertEquals(data.getEmployees().size(), 0);
 			id1 = data.createEmployee("Mario", "Rossi");
 			assertEquals(data.getEmployees().size(), 1);
 			data.rechargeAccount(id1, 1000);
-			assertEquals(data.getEmployeeBalance(id1), new Integer(1000));
+			assertEquals(data.getEmployeeBalance(id1), Integer.valueOf(1000));
 			data.updateEmployee(id1+1, "Michele", "Suria");
 			fail();
 		} catch (EmployeeException e) {
@@ -1170,7 +1048,7 @@ public class TestDataImpl {
 			try {
 				assertEquals(data.getEmployeeName(id1), "Mario");
 				assertEquals(data.getEmployeeSurname(id1), "Rossi");
-				assertEquals(data.getEmployeeBalance(id1), new Integer(1000));
+				assertEquals(data.getEmployeeBalance(id1), Integer.valueOf(1000));
 			} catch (EmployeeException e1) {
 				fail();
 			}
@@ -1181,13 +1059,14 @@ public class TestDataImpl {
 	
 	@Test
 	public void testUpdateEmployee3() {
+		data.reset();
 		int id1 = 0;
 		try {
 			assertEquals(data.getEmployees().size(), 0);
 			id1 = data.createEmployee("Mario", "Rossi");
 			assertEquals(data.getEmployees().size(), 1);
 			data.rechargeAccount(id1, 1000);
-			assertEquals(data.getEmployeeBalance(id1), new Integer(1000));
+			assertEquals(data.getEmployeeBalance(id1), Integer.valueOf(1000));
 			data.updateEmployee(-1, "Michele", "Suria");
 			fail();
 		} catch (EmployeeException e) {
@@ -1195,7 +1074,7 @@ public class TestDataImpl {
 			try {
 				assertEquals(data.getEmployeeName(id1), "Mario");
 				assertEquals(data.getEmployeeSurname(id1), "Rossi");
-				assertEquals(data.getEmployeeBalance(id1), new Integer(1000));
+				assertEquals(data.getEmployeeBalance(id1), Integer.valueOf(1000));
 			} catch (EmployeeException e1) {
 				fail();
 			}
@@ -1210,25 +1089,46 @@ public class TestDataImpl {
 	 */
 	
 	@Test
-	public void testDataPersistency() {
-		int idB=-1, idE=-1;
+	// > 1 iterations for loop coverage
+	public void testGetBeveragesId3() {
 		try {
-			idB = data.createBeverage("Coffee", 20, 500);
-			idE = data.createEmployee("Mario", "Rossi");
-			data.rechargeAccount(idE, 700);
-			data.buyBoxes(idB, 1);
-			data.sellCapsules(idE, idB, 4, true);
-		} catch (Exception e) {
-			fail("Exception while creating the environment");
+			int idB = data.createBeverage("Tea", 25, 400);
+			List<Integer> beverages = data.getBeveragesId();
+			assertTrue(beverages.size() == 2);
+			assertTrue(beverages.contains(beverageId));
+			assertTrue(beverages.contains(idB));
+		} catch (BeverageException e) {
+			fail();
 		}
-		
+	}
+	
+	@Test
+	// > 1 iterations for loop coverage
+	public void testGetBeverages3() {
 		try {
+			int idB = data.createBeverage("Tea", 25, 400);
+			Map<Integer, String> beverages = data.getBeverages();
+			assertTrue(beverages.size() == 2);
+			assertNotNull(beverages.get(beverageId));
+			assertNotNull(beverages.get(idB));
+			assertTrue(beverages.get(beverageId).equals("Coffee"));
+			assertTrue(beverages.get(idB).equals("Tea"));
+		} catch (BeverageException e) {
+			fail();
+		}
+	}
+	
+	@Test
+	public void testDataPersistency() {
+		try {
+			data.sellCapsules(employeeId, beverageId, 4, true);
+			data.sellCapsulesToVisitor(beverageId, 4);
 			data = new DataImpl();	// simulate restart of the application
-			assertEquals(new Integer(200), data.getBalance());
-			assertEquals(new Integer(600), data.getEmployeeBalance(idE));
-			assertEquals(new Integer(16), data.getBeverageCapsules(idB));
-			assertEquals("Mario Rossi", data.getEmployeeName(idE) + " " + data.getEmployeeSurname(idE));
-			assertEquals("Coffee", data.getBeverageName(idB));
+			assertEquals(Integer.valueOf(100), data.getBalance());
+			assertEquals(Integer.valueOf(900), data.getEmployeeBalance(employeeId));
+			assertEquals(Integer.valueOf(32), data.getBeverageCapsules(beverageId));
+			assertEquals("Mario Rossi", data.getEmployeeName(employeeId) + " " + data.getEmployeeSurname(employeeId));
+			assertEquals("Coffee", data.getBeverageName(beverageId));
 		} catch (Exception e) {
 			fail();
 		}
@@ -1245,6 +1145,7 @@ public class TestDataImpl {
 	
 	@Test
 	public void testScenario2() {
+		data.reset();
 		try {
 			int employeeId = data.createEmployee("Mario", "Rossi");
 			int beverageId = data.createBeverage("Coffee", 20, 500);
@@ -1271,6 +1172,7 @@ public class TestDataImpl {
 	
 	@Test
 	public void testScenario6() {
+		data.reset();
 		try {
 			int employeeId = data.createEmployee("Mario", "Rossi");
 			
@@ -1301,13 +1203,14 @@ public class TestDataImpl {
 	
 	@Test
 	public void testScenario7() {
+		data.reset();
 		try {
 			int id = data.createEmployee("Mario", "Rossi");
 			data.rechargeAccount(id, 1);
 			int b = data.createBeverage("Coffee", 1, 1);
 			assertEquals("Coffee", data.getBeverageName(b));
 			data.buyBoxes(b, 1);
-			assertEquals(new Integer(0), data.getBalance());
+			assertEquals(Integer.valueOf(0), data.getBalance());
 		} catch (Exception e) {
 			fail();
 		}
@@ -1315,6 +1218,7 @@ public class TestDataImpl {
 	
 	@Test
 	public void testPerformance() {
+		data.reset();
 		try {
 			long begin, end;
 			int idE, idB;
